<resources>
    <string name="app_name">CelesNotifier</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Message Details</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">SMS Signature</string>
    <string name="send_title">SMS Preference</string>
    <string name="signature_key">sms signature</string>
    <string name="send_key">SMS Preference</string>
    <string name="send_me_key">send 2 me only</string>
    <string name="send_all_key">send all</string>
    <string name="latest_result_key">latest_result_key</string>
    <string name="lat_res_title">Latest results</string>
    <string name="dont_send_key">dntsenddismsg</string>
    <string name="receipentNames">1\.Wajahat \n 2\.Wajahat</string>

    <!-- Service Preferences -->
    <string name="service_header">Service</string>
    <string name="service_status_key">serviceStatus</string>
    <string name="sms_notif_key">sms_notif</string>
    <string name="svc_status_prefFileName">kkasdugdjfvniuxasyfdsyfsdhfsncvisucicuad
        bairsdfbxc</string>
    <string name="svc_status_prefName">kkasdugdjfvniuxasyfdsy
        sdfsdfshdbvbsdv1651sd16sd3s16sd33fsdhfsncvisucicuadbairsdfbxc</string>
    <string name="debug_status_prefFileName">kkasdugdjfvniuxa234234234234234syfdsyfsdhfsncvisucicuad
        bairsdfbxc</string>
    <string name="debug_status_prefName">kkasdugdjfvniuxadfgdfgdfhgfnff23423syfdsy
        sdfsdfshdbvbsdv1651sd16sd3s16sd33fsdhfsncvisucicuadbairsdfbxc</string>
    <string name="service_status">Service Status</string>
    <string name="sms_notification_title">Debug</string>
    <string name="sms_notification_summary_on">All results will be notified
    </string>
    <string name="sms_notification_summary_off">Only warnings wll be notified</string>
    <string name="lastUpdated_time">last_update_time</string>
    <string name="send_sharedPref_key">jkznxckznx545</string>
    <string name="dateNTimePSRSE_Format">yyyy MMM dd HH:mm</string>
    <string name="timeDisp_Format">MMM dd hh:mm aa</string>
    <string name="dateNTimeSMS_Format">EEE MMM dd yyyy HH:mm z</string>
    <string name="obj1_norad">prss_norad</string>
    <string name="max_prob">max_prob</string>
    <string name="min_range">min_range</string>
    <string name="rel_vel">rel_velocity</string>
    <string name="obj2_norad">deb_norad</string>
    <string name="obj1_name">obj 1 name</string>
    <string name="obj2_name">obj 2 name</string>
    <string name="TCA">min_range_time</string>
    <string name="logFileSize_key">pref_logFileSize_field_key</string>
    <string name="logFileSize_title">Log File Size</string>


    <!-- Alert Preferences -->
    <string name="selectRingtone_title">Select Alert Ringtone</string>
    <string name="ringtonePref_key">ringtone preference key</string>

</resources>