<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/service_header">

        <SwitchPreferenceCompat
            app:key="@string/service_status_key"
            app:title="@string/service_status"
            app:switchTextOn="Running"
            app:switchTextOff="Stoppped"/>

        <SwitchPreferenceCompat
            app:dependency="serviceStatus"
            app:key="@string/sms_notif_key"
            app:summaryOff="@string/sms_notification_summary_off"
            app:summaryOn="@string/sms_notification_summary_on"
            app:title="@string/sms_notification_title" />

    </PreferenceCategory>

</PreferenceScreen>